ListBugFilterByStatusCommands created